2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* DEBIAN/make_deb_package.sh: fixed recursive infinite loop with try to
	copy "temp_package" into "temp_package/usr/share/pandora_agent/temp_package"
	again and again.

2010-11-01  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control,
	DEBIAN/make_deb_package.sh
	pandora_server.spec
	lib/PandoraFMS/Config.pm
	pandora_server.redhat.spec:  Version updates and small changes for packaging
	the 3.2 RC1 version in the next days/hours.

2010-10-28  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Added the Pandora Database Synchronization
	script to server for pending task 3085932

2010-10-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a bug that made the server crash when
	  trying to match an alert with an invalid regular expression.

2010-10-25  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Change a Warning notice to
	informative notice

2010-10-22  Sancho Lerena <slerena@artica.es>

    * Config.pm: Parsing for mta_from doesn't remove blanks, allowing to
    use a Normal name + Email address in the from.

    * Tools.pm: Email output is parsed with a html decode first. 
    Added timeticks option for tools (intented to use in the future).

    * pandora_server.conf: Example of usage in the mta_from with a fully
    composed email address.

2010-10-22  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Deleted Solaris specific SNMPGET
	definition. It is the same as Linux.
	
2010-10-22  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Changed ping count to for() loop instead of
	using count(-c) option in pandora_ping(). By it, ping execution can be
	finished in short time.
	Added support for Solaris.
	Changed some ping usage for FreeBSD.

2010-10-21  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a generic update function to return
	the number of changes
