@@ -1,3 +1,8 @@
+2010-11-02  Sergio Martin <sergio.martin@artica.es>
+
+	* util/recon_scripts/snmpdevices.pl: Fixed a module types bug and
+	html entities codification
+
 2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* DEBIAN/make_deb_package.sh: fixed recursive infinite loop with try to
